Thu Nov  2 22:28:49 2006  Tim Janik  <timj@gtk.org>

	* birnettests.h: added TABORT_HANDLER() to specify a custom callback
	for informative printouts to be executed upon failing assertions.
	such a handler setup is only active within a single TSTART/TDONE block.
	added TCHECK_CMP() and TASSERT_CMP() to print out mismatching
	values of failing comparisons.

Wed Nov  1 11:46:10 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* birnetcdefs.h: Applied Patch from Tim to define BirnetInt64 and
	BirnetUInt64 as (signed) long long int, as otherwise %lld printf
	formats on AMD64 emit compiler warnings.
	
	* birnetthreadimpl.cc: Use BirnetUInt64 arguments for thread table
	function implementations of thread_awake_after and
	thread_emit_wakeups, to be consistent with the thread table function
	pointers defined in birnetcdefs.h.

Tue Oct 24 23:51:12 2006  Tim Janik  <timj@gtk.org>

	* birnettests.h: added cpu name to treport_*() output.

Mon Oct 23 17:56:19 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* birnetthreads.hh: Fixed typos in AutoLocker documentation.

Wed Oct 11 02:11:29 2006  Tim Janik  <timj@gtk.org>

	* birnetutf8.hh: added utf8_align() and utf8_aligned() to step back
	from the middle of an UTF-8 char.

Sat Oct 21 19:02:47 2006  Tim Janik  <timj@gtk.org>

	* birnettests.h (treport_generic): allow fixed portion of numbers
	to occupy 9 characters. added more test units.

Sat Oct 21 17:14:54 2006  Tim Janik  <timj@gtk.org>

	* birnetutils.hh, birnetutils.cc: provide init_settings() function to 
	access initialization setting values. test should now use:
	init_settings().test_perf
	init_settings().test_slow or
	init_settings().test_quick.

	* birnettests.h: fixed float printing.

Sat Oct 21 03:46:05 2006  Tim Janik  <timj@gtk.org>

	* birnettests.h: added treport_maximized() and treport_minimized()
	benchmark reporting funcitons. added TUnitType to allow specification
	of units for benchmark results.

	* birnetcdefs.h: