@@ -13,6 +13,10 @@ progs_ldadd 	 = $(top_builddir)/birnet/libbirnet.o $(BIRNET_LIBS) -lm
 TESTS		+= infotest
 infotest_SOURCES = infotest.cc
 infotest_LDADD	 = $(progs_ldadd)
+TESTS		+= math
+PERFTESTS       += math
+math_SOURCES	 = math.cc
+math_LDADD	 = $(progs_ldadd)
 TESTS		+= strings
 SLOWTESTS       += strings
 strings_SOURCES  = strings.cc
