@@ -1,0 +1,181 @@
+/* Birnet
+ * Copyright (C) 2006 Tim Janik
+ *
+ * This library is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public
+ * License as published by the Free Software Foundation; either
+ * version 2 of the License, or (at your option) any later version.
+ *
+ * This library is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ * Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General
+ * Public License along with this library; if not, write to the
+ * Free Software Foundation, Inc., 59 Temple Place, Suite 330,
+ * Boston, MA 02111-1307, USA.
+ */
+//#define TEST_VERBOSE
+#include <birnet/birnettests.h>
+#include <birnet/birnet.hh>
+
+namespace {
+using namespace Birnet;
+
+static void
+test_dtoi()
+{
+  TSTART ("dtoi32");
+  TASSERT (_dtoi32_generic (0.0) == 0);
+  TASSERT (_dtoi32_generic (+0.3) == +0);
+  TASSERT (_dtoi32_generic (-0.3) == -0);
+  TASSERT (_dtoi32_generic (+0.7) == +1);
+  TASSERT (_dtoi32_generic (-0.7) == -1);
+  TASSERT (_dtoi32_generic (+2147483646.3) == +2147483646);
+  TASSERT (_dtoi32_generic (+2147483646.7) == +2147483647);
+  TASSERT (_dtoi32_generic (-2147483646.3) == -2147483646);
+  TASSERT (_dtoi32_generic (-2147483646.7) == -2147483647);
+  TASSERT (_dtoi32_generic (-2147483647.3) == -2147483647);
+  TASSERT (_dtoi32_generic (-2147483647.7) == -2147483648LL);
+  TASSERT (dtoi32 (0.0) == 0);
+  TASSERT (dtoi32 (+0.3) == +0);
+  TASSERT (dtoi32 (-0.3) == -0);
+  TASSERT (dtoi32 (+0.7) == +1);
+  TASSERT (dtoi32 (-0.7) == -1);
+  TASSERT (dtoi32 (+2147483646.3) == +2147483646);
+  TASSERT (dtoi32 (+2147483646.7) == +2147483647);
+  TASSERT (dtoi32 (-2147483646.3) == -2147483646);
+  TASSERT (dtoi32 (-2147483646.7) == -2147483647);
+  TASSERT (dtoi32 (-2147483647.3) == -2147483647);
+  TASSERT (dtoi32 (-2147483647.7) == -2147483648LL);
+  TDONE();
+  TSTART ("dtoi64");
+  TASSERT (_dtoi64_generic (0.0) == 0);
+  TASSERT (_dtoi64_generic (+0.3) == +0);
+  TASSERT (_dtoi64_generic (-0.3) == -0);
+  TASSERT (_dtoi64_generic (+0.7) == +1);
+  TASSERT (_dtoi64_generic (-0.7) == -1);
+  TASSERT (_dtoi64_generic (+2147483646.3) == +2147483646);
+  TASSERT (_dtoi64_generic (+2147483646.7) == +2147483647);
+  TASSERT (_dtoi64_generic (-2147483646.3) == -2147483646);
+  TASSERT (_dtoi64_generic (-2147483646.7) == -2147483647);
+  TASSERT (_dtoi64_generic (-2147483647.3) == -2147483647);
+  TASSERT (_dtoi64_generic (-2147483647.7) == -2147483648LL);
+  TASSERT (_dtoi64_generic (+4294967297.3) == +4294967297LL);
+  TASSERT (_dtoi64_generic (+4294967297.7) == +4294967298LL);
+  TASSERT (_dtoi64_generic (-4294967297.3) == -4294967297LL);
+  TASSERT (_dtoi64_generic (-4294967297.7) == -4294967298LL);
+  TASSERT (_dtoi64_generic (+1125899906842624.3) == +1125899906842624LL);
+  TASSERT (_dtoi64_generic (+1125899906842624.7) == +1125899906842625LL);
+  TASSERT (_dtoi64_generic (-1125899906842624.3) == -1125899906842624LL);
+  TASSERT (_dtoi64_generic (-1125899906842624.7) == -1125899906842625LL);
+  TASSERT (dtoi64 (0.0) == 0);
+  TASSERT (dtoi64 (+0.3) == +0);
+  TASSERT (dtoi64 (-0.3) == -0);
+  TASSERT (dtoi64 (+0.7) == +1);
+  TASSERT (dtoi64 (-0.7) == -1);
+  TASSERT (dtoi64 (+2147483646.3) == +2147483646);
+  TASSERT (dtoi64 (+2147483646.7) == +2147483647);
+  TASSERT (dtoi64 (-2147483646.3) == -2147483646);
+  TASSERT (dtoi64 (-2147483646.7) == -2147483647);
+  TASSERT (dtoi64 (-2147483647.3) == -2147483647);
+  TASSERT (dtoi64 (-2147483647.7) == -2147483648LL);
+  TASSERT (dtoi64 (+4294967297.3) == +4294967297LL);
+  TASSERT (dtoi64 (+4294967297.7) == +4294967298LL);
+  TASSERT (dtoi64 (-4294967297.3) == -4294967297LL);
+  TASSERT (dtoi64 (-4294967297.7) == -4294967298LL);
+  TASSERT (dtoi64 (+1125899906842624.3) == +1125899906842624LL);
+  TASSERT (dtoi64 (+1125899906842624.7) == +1125899906842625LL);
+  TASSERT (dtoi64 (-1125899906842624.3) == -1125899906842624LL);
+  TASSERT (dtoi64 (-1125899906842624.7) == -1125899906842625LL);
+  TDONE();
+  TSTART ("iround");
+  TASSERT (round (0.0) == 0.0);
+  TASSERT (round (+0.3) == +0.0);
+  TASSERT (round (-0.3) == -0.0);
+  TASSERT (round (+0.7) == +1.0);
+  TASSERT (round (-0.7) == -1.0);
+  TASSERT (round (+4294967297.3) == +4294967297.0);
+  TASSERT (round (+4294967297.7) == +4294967298.0);
+  TASSERT (round (-4294967297.3) == -4294967297.0);
+  TASSERT (round (-4294967297.7) == -4294967298.0);
+  TASSERT (iround (0.0) == 0);
+  TASSERT (iround (+0.3) == +0);
+  TASSERT (iround (-0.3) == -0);
+  TASSERT (iround (+0.7) == +1);
+  TASSERT (iround (-0.7) == -1);
+  TASSERT (iround (+4294967297.3) == +4294967297LL);
+  TASSERT (iround (+4294967297.7) == +4294967298LL);
+  TASSERT (iround (-4294967297.3) == -4294967297LL);
+  TASSERT (iround (-4294967297.7) == -4294967298LL);
+  TASSERT (iround (+1125899906842624.3) == +1125899906842624LL);
+  TASSERT (iround (+1125899906842624.7) == +1125899906842625LL);
+  TASSERT (iround (-1125899906842624.3) == -1125899906842624LL);
+  TASSERT (iround (-1125899906842624.7) == -1125899906842625LL);
+  TDONE();
+  TSTART ("iceil");
+  TASSERT (ceil (0.0) == 0.0);
+  TASSERT (ceil (+0.3) == +1.0);
+  TASSERT (ceil (-0.3) == -0.0);
+  TASSERT (ceil (+0.7) == +1.0);
+  TASSERT (ceil (-0.7) == -0.0);
+  TASSERT (ceil (+4294967297.3) == +4294967298.0);
+  TASSERT (ceil (+4294967297.7) == +4294967298.0);
+  TASSERT (ceil (-4294967297.3) == -4294967297.0);
+  TASSERT (ceil (-4294967297.7) == -4294967297.0);
+  TASSERT (iceil (0.0) == 0);
+  TASSERT (iceil (+0.3) == +1);
+  TASSERT (iceil (-0.3) == -0);
+  TASSERT (iceil (+0.7) == +1);
+  TASSERT (iceil (-0.7) == -0);
+  TASSERT (iceil (+4294967297.3) == +4294967298LL);
+  TASSERT (iceil (+4294967297.7) == +4294967298LL);
+  TASSERT (iceil (-4294967297.3) == -4294967297LL);
+  TASSERT (iceil (-4294967297.7) == -4294967297LL);
+  TASSERT (iceil (+1125899906842624.3) == +1125899906842625LL);
+  TASSERT (iceil (+1125899906842624.7) == +1125899906842625LL);
+  TASSERT (iceil (-1125899906842624.3) == -1125899906842624LL);
+  TASSERT (iceil (-1125899906842624.7) == -1125899906842624LL);
+  TDONE();
+  TSTART ("ifloor");
+  TASSERT (floor (0.0) == 0.0);
+  TASSERT (floor (+0.3) == +0.0);
+  TASSERT (floor (-0.3) == -1.0);
+  TASSERT (floor (+0.7) == +0.0);
+  TASSERT (floor (-0.7) == -1.0);
+  TASSERT (floor (+4294967297.3) == +4294967297.0);
+  TASSERT (floor (+4294967297.7) == +4294967297.0);
+  TASSERT (floor (-4294967297.3) == -4294967298.0);
+  TASSERT (floor (-4294967297.7) == -4294967298.0);
+  TASSERT (ifloor (0.0) == 0);
+  TASSERT (ifloor (+0.3) == +0);
+  TASSERT (ifloor (-0.3) == -1);
+  TASSERT (ifloor (+0.7) == +0);
+  TASSERT (ifloor (-0.7) == -1);
+  TASSERT (ifloor (+4294967297.3) == +4294967297LL);
+  TASSERT (ifloor (+4294967297.7) == +4294967297LL);
+  TASSERT (ifloor (-4294967297.3) == -4294967298LL);
+  TASSERT (ifloor (-4294967297.7) == -4294967298LL);
+  TASSERT (ifloor (+1125899906842624.3) == +1125899906842624LL);
+  TASSERT (ifloor (+1125899906842624.7) == +1125899906842624LL);
+  TASSERT (ifloor (-1125899906842624.3) == -1125899906842625LL);
+  TASSERT (ifloor (-1125899906842624.7) == -1125899906842625LL);
+  TDONE();
+}
+
+} // Anon
+
+int
+main (int   argc,
+      char *argv[])
+{
+  birnet_init_test (&argc, &argv);
+
+  if (init_settings().test_quick)
+    test_dtoi();
+  
+  return 0;
+}
+
+/* vim:set ts=8 sts=2 sw=2: */
